public/stylesheets/main.css
#topmost_bar {
	background-color:#363636;
	height:22px;
	padding:5px;
	text-align:left;
	color:white;
	font-weight:bold;
}
.stories_container {
    background-color:#006699;
    width:350px;
    float:left;
    color:#282828;
    padding:2px;
    margin:0px;
}
.stories_container_current_sprint {
    background-color:#ffffff;
    width:880px;
		height:600px;
    float:left;
    color:#282828;
    padding:2px;
    margin:0px;
		text-align:left;
}
.story {
		cursor:pointer;
    background-color:#EBEBEB;
    width:98%;
		height:18px;
    padding:4px;
    margin:2px;
		font-size:11px;
    text-align:left;
}
.story_current_sprint {
		cursor:pointer;
    background-color:#EBEBEB;
    width:99%;
		height:32px;
    padding:4px;
    margin:2px;
    text-align:left;
		font-size:14px;
}
#new_story {
    background-color:#006699;
    width:872px;
    height:110px;
    padding:2px 2px 2px 10px;
		margin:0px;
		float:left;
		text-align:left;
}
#quick_stats {
    background-color:#ffffff;
    width:343px;
    height:100px;
    padding:6px;
		margin:0px;
    float:left;
		text-align:left;
}
.new_story_input {
    height:40px;
    width:780px;
    font-size:18px;
}
.story_details {
    text-align:left;
    background-color:#C2C2C2;
    display:none;
		margin:1px;
    padding:3px;
}

